# django-sphinx-setup

./: .gitignore  ReadMe.md  manage.py  pyproject.toml
djangospx/: asgi.py  settings.py  urls.py  wsgi.py
docs/: conf.py  djangospx.rst  index.rst  modules.rst
docs/_build/doctrees/: djangospx.doctree  environment.pickle  index.doctree  manage.doctree  modules.doctree  users.doctree  users.migrations.doctree
docs/_build/html/: .buildinfo  djangospx.html  genindex.html  index.html  manage.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  users.html  users.migrations.html
docs/_build/html/_modules/: functools.html  index.html  manage.html
docs/_build/html/_modules/django/db/models/: manager.html  query_utils.html
docs/_build/html/_modules/django/db/models/fields/: related_descriptors.html
docs/_build/html/_modules/users/: apps.html  models.html  utils.html
docs/_build/html/_sources/: users.rst.txt
users/: models.py  serializers.py  tests.py  urls.py  utils.py  views.py
users/migrations/: 0001_initial.py  0002_userinfo_first_name_userinfo_last_name.py
