[tool.poetry]
name = "firstthinkpaddjango"
version = "0.1.0"
description = "Django and sphinx setup"
authors = ["Ivan <milemik68@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.1.2"
djangorestframework = "^3.14.0"
sphinx = "^5.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
